feat: delete account | metric setup
